Opened 16 years ago

Closed 16 years ago

#1884 closed bug (fixed)

Rebooting from the deskbar in haiku freeze my laptop (Acer Aspire 1510)

Reported by: oco Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

There is the same problem when i shutdown this computer and i click on the restart button : the mouse cursor freeze.

Here is a patch to fix this problem (see attachment)

I use a snooze command after sending the reboot command to the keyboard controller. I propose to use the same delay as in FreeBSD (500000 microseconds).

Attachments (1)

arch_cpu.diff (408 bytes ) - added by oco 16 years ago.

Download all attachments as: .zip

Change History (2)

by oco, 16 years ago

Attachment: arch_cpu.diff added

comment:1 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

Applied in hrev24202, thanks!

Note: See TracTickets for help on using tickets.