Applied patch by Olivier Coursière: this should help rebooting on some machines, and fixes bug #1884, thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24202 a95241bf-73f2-0310-859d-f6bbb57e9c96